# Connect4

./: .gitmodules  README.md
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  algorithm.cpp  board.hpp  hash_table.hpp  test.cpp
app/src/main/java/com/example/connect4/: MainActivity.kt
app/src/main/java/com/example/connect4/ui/theme/: Theme.kt
gradle/wrapper/: gradle-wrapper.properties
